# senior

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.rs
completions/: senior.bash  senior.bash-completion  senior.bash-completions  senior.zsh-completion
importers/: pass2senior.py
src/: cleansetup.sh  cli.rs  main.rs  senior.py  seniormenu
src/completions/: senior.bash  senior.zsh
src/importers/: pass2senior.py
src/senior/: Cargo.toml  build.rs
src/senior/src/: cli.rs  lib.rs  main.rs
src/seniorpw/: Cargo.toml
src/seniorpw/src/: cli.rs  main.rs
