[package]
name = "senior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
which = "4.3.0"
tempdir = "0.3.7"
thotp = "0.1"
base32 = "0.4"

[build-dependencies]
clap_complete = "4.1.4"
clap = { version = "4.0.22", features = ["derive"] }
