[package]
name = "senior"
version = "0.6.0"
edition = "2021"
default-run = "senior"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
which = "4.4.0"
tempdir = "0.3.7"
thotp = "0.1"
base32 = "0.4"
rpassword = "7.2.0"
interprocess = "1.2.1"
chrono = "0.4.26"
age = { version = "0.9.2", features = ["ssh"] }
sysinfo = "0.29.6"
atty = "0.2.14"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2.14"
