[package]
name = "senior"
version = "0.6.0"
edition = "2021"
default-run = "senior"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.9", features = ["ssh"] }
atty = "0.2"
base32 = "0.4"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
interprocess = "1.2"
rpassword = "7.3"
sysinfo = "0.30"
tempdir = "0.3"
thotp = "0.1"
walkdir = "2.4"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = "4.4"
clap_mangen = "0.2"
