[package]
name = "senior"
version = "0.6.0"
edition = "2021"
default-run = "senior"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.10", features = ["ssh"] }
atty = "0.2"
base32 = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
interprocess = "2.2"
rpassword = "7.3"
sysinfo = "0.31"
tempdir = "0.3"
thotp = "0.1"
walkdir = "2.5"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = "4.5"
clap_mangen = "0.2"
